# got_label_creator_v3

./: Cargo.toml  README.md
mitsubishi/: got_label_creator.GTX  got_label_creator.gx3
src/: errors.rs  lib.rs  main.rs
src/application/: mod.rs  runner.rs  traits.rs
src/domain/: mod.rs
src/domain/convert_from_xml/: convert_xml_document.rs  convert_xml_variable.rs  mod.rs
src/domain/convert_to_csv/: convert_to_csv.rs  mod.rs
src/domain/convert_xml/: convert_xml_document.rs  convert_xml_variable.rs
src/domain/models/: inner.rs  input_xml.rs  mod.rs
src/infrastructure/: csv_writer.rs  file_reader.rs  mod.rs  xml_reader.rs
src/models/: xml.rs
tests/: Analog.xml  array_of_base_types.xml  base_types.xml
tests/array_of_base_types/: array_of_base_types.xml
tests/base_types/: base_types_reference.csv  main.rs
