[package]
name = "got_label_creator_v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
quick-xml = { version = "0.29.0", features = ["serialize"] }
serde = { version = "1.0.171", features = ["derive"] }
